// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PulseDot renders for status down 1`] = `
<div
  className="makeStyles-root-2 makeStyles-down-7"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`PulseDot renders for status healthy 1`] = `
<div
  className="makeStyles-root-2 makeStyles-healthy-3"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`PulseDot renders for status restarting 1`] = `
<div
  className="makeStyles-root-2 makeStyles-restarting-6"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`PulseDot renders for status syncing 1`] = `
<div
  className="makeStyles-root-2 makeStyles-syncing-4"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`PulseDot renders with custom className 1`] = `
<div
  className="makeStyles-root-2 makeStyles-healthy-3 custom-class-name"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`PulseDot renders with custom size 1`] = `
<div
  className="makeStyles-root-2 makeStyles-healthy-3"
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;
